v8/tests/messages/throw-newline.out
throw-newline.js:1: Uncaught SyntaxError: Illegal newline after throw
throw
^^^^^
